--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,6 @@
     {{ content }}
     {% include footer.html %}
     <script src="/js/dist/app.bundle.js"></script>
+    <script src="/js/dist/main.bundle.js"></script>
   </body>
 </html>
