--- a/_includes/features.html
+++ b/_includes/features.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="col-lg-5 offset-lg-1 align-self-end">
-        <img class="w-100 obj-contain px-lg-3 px-2" src="/img/Vert.png" alt="Phone">
+        <img class="w-100 obj-contain px-md-3 px-5" src="/img/Vert.png" alt="Phone">
       </div>
     </div>
   </div>
