--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,6 +3,7 @@
       <div class="container h-100">
         <div class="row h-100">
           <div class="col-lg-6 align-self-center">
+            <hr class="d-block d-md-none my-5 invisible">
             <h1 class="h1 text-secondary mb-3 mt-5 mt-lg-0">
               Introduce The Product Quickly & Effectively
             </h1>
