--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="flex-grow-1">
-      <div class="d-flex justify-content-md-center justify-content-between">
+      <div class="d-flex justify-content-lg-center justify-content-between">
         <a class="navbar-brand text-primary font-weight-bold m-0" href="#">Wunder Mobility</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
       </div>  
     </div> 
     
-    <div class="navbar-nav d-none d-sm-block main-nav text-md-right">
+    <div class="navbar-nav d-none d-lg-block main-nav text-md-right">
       <a class="btn btn-dark btn-sm my-2 my-sm-0  btn-mw-sm" href="#">Contact us</a>
     </div>
 
