css hero bg change

--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -31,6 +31,11 @@ body {
   background-position: bottom right;
   background-repeat: no-repeat;
   background-size: contain;
+
+  @include media-breakpoint-down(md) { 
+    background-position: top left 70px;
+    background-size: cover;
+  }
 }
 
 
@@ -50,7 +55,7 @@ body {
   
   @include media-breakpoint-up(lg) { 
     height: 110vh;
-   }
+  }
 }
 
 .is-overlay {
