--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -91,5 +91,9 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  @include media-breakpoint-down(md) { 
+    background-size: 400%;
+  }
 }
 
