--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light justify-content-md-between fixed-top">
   <div class="container">
 
-    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse flex-grow-0 order-2 order-lg-1" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto justify-content-md-between main-nav">
         {% for item in site.data.navigation %}
         <li class="nav-item">
@@ -12,7 +12,7 @@
       </ul>
     </div>
 
-    <div class="flex-grow-1">
+    <div class="flex-grow-1 order-1 order-lg-2">
       <div class="d-flex justify-content-lg-center justify-content-between">
         <a class="navbar-brand text-primary font-weight-bold m-0" href="#">Wunder Mobility</a>
 
@@ -22,7 +22,7 @@
       </div>  
     </div> 
     
-    <div class="navbar-nav d-none d-lg-block main-nav text-md-right">
+    <div class="navbar-nav d-none d-lg-block main-nav text-md-right order-3">
       <a class="btn btn-dark btn-sm my-2 my-sm-0  btn-mw-sm" href="#">Contact us</a>
     </div>
 
