--- a/_scss/components/_navbar.scss
+++ b/_scss/components/_navbar.scss
@@ -5,4 +5,8 @@
     background-color: #fff;
     box-shadow: 6px 3px 12px rgba(68, 68, 68, 0.05)
   }
+
+  @include media-breakpoint-down(lg) { 
+    background-color: #fff;
+  }
 }
