--- a/css/main.css
+++ b/css/main.css
@@ -9851,3 +9851,9 @@ body {
   background-color: #fff;
   box-shadow: 6px 3px 12px rgba(68, 68, 68, 0.05);
 }
+
+@media (max-width: 1199.98px) {
+  .navbar {
+    background-color: #fff;
+  }
+}
